--- a/typingTest.html
+++ b/typingTest.html
@@ -67,4 +67,72 @@
 	</div>
 </body>
 
+<script>
+	const setOfWords = ["A promise is a proxy for a value not necessarily known when the promise is created.",
+					"It allows you to associate handlers with an asynchronous actions eventual success value or failure reason.",
+					"This lets asynchronous methods return values like synchronous method.",
+					"instead of immediately returning the final value, the asynchronous method returns a promise to supply the value at some point in the future."];
+	const msg = document.getElementById('msg');
+	const typeWords = document.getElementById('mywords');
+	const btn = document.getElementById('btn') ;
+	let startTime, endTime;
+
+	const playGame = () => {
+		let randomNumber = Math.floor(Math.random() * setOfWords.length);
+		msg.innerText = setOfWords[randomNumber];
+		let date = new Date();
+		startTime = date.getTime();
+		btn.innerText = "Done";
+	}
+
+	const endPlay = () =>{
+		let date = new Date();
+		endTime = date.getTime();
+		let totalTime = ((endTime - startTime)/ 1000);
+		console.log(totalTime);
+
+		let totalStr = typeWords.value;
+		let wordCount = wordCounter(totalStr);
+
+		let speed = Math.round((wordCount / totalTime) * 60);
+
+		let finalMsg = " You typed total at " +speed+ " words per minutes.";
+
+		finalMsg += compareWords(msg.innerText,totalStr);
+
+		msg.innerText = finalMsg;
+	}
+
+		const wordCounter = (str) => {
+			let response = str.split(" ").length;
+			console.log(response);
+			return response;
+		}
+
+		const compareWords = (str1, str2) =>{
+			let words1 = str1.split(" ");
+			let words2 = str2.split(" ");
+			let cnt = 0;
+
+			words1.forEach(function (item, index){
+				if (item == words2[index]){
+					cnt++;
+				}
+			})
+
+			let errorWords = (words1.length - cnt);
+			return (cnt + "correct out of " + words1.length + "words and the total number of error are " + errorWords + ".");
+		}
+
+		btn.addEventListener('click',function(){
+			if(this.innerText == 'Start'){
+				typeWords.disabled = false;
+				playGame();
+			}else if(this.innerText == "Done"){
+				typeWords.disabled = true;
+				btn.innerText = "Start";
+				endPlay();
+			}
+		})
+</script>
 </html>
